# price_fetcher_v2

./: Cargo.toml  config.json
src/: datastore.rs  main.rs  models.rs
src/exchanges/: binance.rs  coinbase.rs  htx.rs  kucoin.rs  kukoinx.rs  mexc.rs  mod.rs
src/metrics/: message_metrics.rs  mod.rs
