[package]
name = "price_fetcher_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
flate2 = { version = "1.0.35" }
futures = "0.3.31"
futures-util = "0.3.31"
serde ={version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = {version= "0.24.0", features = ["native-tls"]}
