[package]
name = "price_fetcher_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
binance = "0.21.0"
chrono = "0.4.38"
flate2 = { version = "1.0.35" }
futures = "0.3.31"
futures-util = "0.3.31"
reqwest = "0.12.9"
serde ={version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.6"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = {version= "0.24.0", features = ["native-tls"]}
tracing = "0.1.41"
